Fixed wrong reference

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: blang/latex
 
 build:
   script:
-    - latexmk -pdf main.tex
+    - latexmk -pdf -jobname=./oenology main.tex
   artifacts:
     paths:
       - "oenology.pdf"
