--- a/.github/workflows/PDF_build.yml
+++ b/.github/workflows/PDF_build.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: oenologyPDF
-          path: Oenology.pdf
+          path: oenology.pdf
